@@ -1,5 +1,10 @@
 CCMenu Release Notes
 
+(unreleased)
+
+* Fix for a bug that made CCMenu 12.0 incompatible with OS X 10.8/10.9.
+
+
 CCMenu 12.0
 
 * When not displaying black and white icons, the use of symbols is now
